# serbzip

./: .gitignore  Cargo.toml  README.md  dict.blk  dict.img  dict.txt
.github/workflows/: master.yml  pull_request.yml
serbzip/: Cargo.toml  LICENSE
serbzip-core/: Cargo.toml  README.md
serbzip-core/src/: lib.rs  succinct.rs
serbzip-core/src/codecs/: armenoid.rs  balkanoid.rs
serbzip-core/src/codecs/armenoid/: tests.rs
serbzip-core/src/codecs/balkanoid/: dict.rs
serbzip-core/src/succinct/: tests.rs
serbzip-core/tests/: compress_expand.rs  dict_round_trip.rs
serbzip-core/tests/common/: mod.rs
serbzip/src/: cli.rs  main.rs
serbzip/src/cli/: app_error.rs  armenoid_cli.rs  balkanoid_cli.rs
src/: cli.rs  codec.rs  codecs.rs  lib.rs  main.rs  succinct.rs  transcoder.rs
src/cli/: app_error.rs  armenoid_cli.rs  balkanoid_cli.rs  banner.rs  downloader.rs
src/codec/: dict.rs  tests.rs
src/codec/dict/: tests.rs
src/codecs/: armenoid.rs  balkanoid.rs  tests.rs
src/codecs/armenoid/: tests.rs
src/codecs/balkanoid/: dict.rs  tests.rs
src/codecs/balkanoid/dict/: tests.rs
src/succinct/: tests.rs
src/transcoder/: tests.rs
test_data/: a_dream_within_a_dream.txt  anna_karenina_rus.txt  antigonish.txt  calculus_made_easy.txt  count_of_monte_cristo.txt  dict_eng_standard.txt  dict_rus.txt  dict_small.txt  dracula.txt  effective_kafka.txt  lyublyu_tebya.txt  mormon.txt  new_testament.txt  no_man_is_an_island.txt  odnazhdy.txt  sherlock_holmes.txt  subterranean_vaults.txt  the_raven.txt
tests/: compress_expand.rs  dict_round_trip.rs
tests/common/: mod.rs
