[package]
name = "serbzip"
version = "0.1.0"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A quasi-lossless Balkanoidal meta-lingual compressor."
repository = "https://github.com/ekoutanov/serbzip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"

# optional dependencies for the binary crate
clap = { version = "3.2.16", features = ["derive"], optional = false }
home = { version = "0.5.3", optional = false }
reqwest = { version = "0.11", features = ["blocking"], optional = false }


[dev-dependencies]
rand = "0.8.5"

#[features]
#binary = ["dep:clap", "dep:home", "dep:reqwest"]
#
#[[bin]]
#name = "serbzip"
#required-features = ["binary"]
