[package]
name = "serbzip"
version = "0.3.0"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A quasi-lossless Balkanoidal meta-lingual compressor."
repository = "https://github.com/ekoutanov/serbzip"
exclude = ["/test_data", "/logo", "/bin", "/.idea", "/.github"]

[dependencies]
bincode = { version = "2.0.0-rc.1" }
clap = { version = "3.2.16", features = ["derive"] }
home = { version = "0.5.3" }
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
rand = { version = "0.8.5" }
