[package]
name = "serbzip-core"
version = "0.5.0"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A quasi-lossless Balkanoidal meta-lingual compressor."
repository = "https://github.com/ekoutanov/serbzip"
exclude = ["/test_data", "/logo", "/bin", "/.idea", "/.github", "/coverage"]

[dependencies]
bincode = { version = "2.0.0-rc.1" }

[dev-dependencies]
rand = { version = "0.8.5" }
