[package]
name = "serbzip"
version = "0.6.0"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A quasi-lossless Balkanoidal meta-lingual compressor."
repository = "https://github.com/ekoutanov/serbzip"
exclude = ["/test_data", "/logo", "/bin", "/.idea", "/.github", "/coverage"]

[dependencies]
serbzip-core = { version = "0.6.0", path = "../serbzip-core" }

clap = { version = "3.2.16", features = ["derive"] }
home = { version = "0.5.3" }
reqwest = { version = "0.11", features = ["blocking"] }
